# TrafficLightController

./: .gitignore  CMakeLists.txt  IR remote map.docx  ir_receiver.c  ir_receiver.pio  light_controller.h  light_controller.pio  traffic_light_controller.c  ~$ remote map.docx
ir_receiver_library/: CMakeLists.txt  ir_receiver.c  ir_receiver.h
light_controller_library/: CMakeLists.txt  light_controller.c  light_controller.pio
traffic_light_controller/: CMakeLists.txt  traffic_light_controller.c
